--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -478,7 +478,7 @@ footer{
 }
 
 .portfolio-content-bg{
-  border:2px solid black;
+  border:4px solid black;
   width:100%;
   height: 100%;
   border-radius: 10px;
@@ -495,11 +495,8 @@ footer{
 }
 
 .portfolio-content-title {
-  float: left;
-  position: absolute;
-  margin-left: 50%;
-  margin-top: 38%;
-  font-weight: 900;
+  margin-top: 3%;
+  font-weight: 600;
   font-size: 20px;
   letter-spacing: 2px;
 }
@@ -535,6 +532,7 @@ footer{
 }
 
 .close-button{
+  display: flex;
   margin-top: 1%;
   margin-right: 1%;
   float:right;
@@ -556,6 +554,47 @@ footer{
 .close-button img{
   width:100%;
   height:100%;
+}
+
+.portfolio-detail-content{
+  text-align:center;
+  padding-left: 2%;
+  float:left; 
+}
+
+.portfolio-detail-explain-top{
+  font-size:1.5em;
+  padding-top:15%;
+  font-weight: 900;
+  letter-spacing: 5px;
+}
+
+.portfolio-detail-explain{
+  letter-spacing: 2px;
+  padding-top:5%;
+  padding-bottom:18%;
+}
+
+.portfolio-detail-usedskill-top{
+  font-size:1.5em;
+  border-top:2px solid #f5f5f5;
+  padding-top:15%;
+  font-weight: 900;
+  letter-spacing: 5px;
+}
+.portfolio-detail-usedskill{
+  padding-top:5%;
+  letter-spacing: 2px;
+}
+
+.portfolio-detail-image{
+  border:4px solid black;
+  float:left;
+  margin-top: 13%;
+  height: 320px;
+  width:520px;
+  margin-left:5%;
+
 }
 
 /*--------通常非表示画面のCSS設定終了--------*/
